<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/etnum1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/etnum2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addition" />

    <Button
        android:id="@+id/btnSub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subtract" />

    <Button
        android:id="@+id/btnMul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/multiplication" />

    <Button
        android:id="@+id/btnDiv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/division" />

    <Button
        android:id="@+id/btnSqr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/square_root" />

    <Button
        android:id="@+id/btnPow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/power_of" />

    <TextView
        android:id="@+id/tvDisp"
        android:layout_width="match_parent"
        android:layout_height="294dp" />


    <Button
        android:id="@+id/btnNextScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_next_screen" />
</LinearLayout>